--- a/eStoreApp/templates/eStoreApp/sidebar.html
+++ b/eStoreApp/templates/eStoreApp/sidebar.html
@@ -3,31 +3,20 @@
       <div class="sideMenu bg-mattBlackLight">
         <div class="sidebar">
           <ul class="navbar-nav">
-            <!-- <li class="nav-item">
-              <a href="homepage/" class="nav-link px-2">
-                <i class="material-icons icon">
-                  dashboard
-                </i>
-                <span class="text">Dashboard</span>
-              </a>
-            </li> -->
-            <!-- <li class="nav-item">
-              <a href="#" class="nav-link px-2">
-                <i class="material-icons icon">
-                  person
-                </i>
-                <span class="text">User Profile</span>
-              </a>
-            </li> -->
             <li class="nav-item">
-              <a href="#" class="nav-link px-2">
-                <i class="material-icons icon"> insert_chart </i>
+              <div class="nav-link px-2">
+                <span class="text"></span>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a href="/homepage/mobile/" class="nav-link px-2">
+                <i class="material-icons icon"> devices_other </i>
                 <span class="text">Mobile</span></a
               >
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link px-2">
-                <i class="material-icons icon"> insert_chart </i>
+              <a href="/homepage/laptop/" class="nav-link px-2">
+                <i class="material-icons icon"> devices_other </i>
                 <span class="text">Laptop</span>
               </a>
             </li>
